# CPP3_SmartCalc_v2.0

./: .gitignore
src/: CMakeLists.txt  Makefile  backend_manual_test.cc  readme.md
src/model/: backend.h  calculation.cc  controller.h  parsing.cc  rpn.cc  validation.cc
src/tests/: calculation_binary.cc  calculation_unary.cc  main.cc  tests.h  validation_test.cc
src/view/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/view/resources/: CMakeLists.txt
